# sorting_algorithms

./: 0-bubble_sort.c  1-insertion_sort_list.c  100-shell_sort.c  101-cocktail_sort_list.c  2-selection_sort.c  3-quick_sort.c  CMakeLists.txt  READEME.md  print_array.c  sort.h
